--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
   },
   "parserOptions": {
     "ecmaVersion": 2020,
-    "sourceType": "module"
+    "sourceType": "module",
+    "parser": "@babel/eslint-parser"
   },
   "rules": {
     "no-unused-vars": [
